Fixed the Ajax issue where additional posts are not showing up

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,7 +133,7 @@ form.form-inline.my-2.my-lg-0 {
 }
 .user-details.container {
   margin: 0 auto;
-  top: 85px;
+  top: 80px;
   position: relative;
   padding: 0 10px;
   width: 75%;
